--- a/popup.html
+++ b/popup.html
@@ -1,13 +1,75 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>URL to Google Doc Appender</title>
+    <title>URL to Google Doc Appender</title>
+    <style>
+        body {
+            width: 300px;
+            padding: 20px;
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+        }
+
+        h1 {
+            font-size: 18px;
+            color: #333;
+            margin-bottom: 20px;
+        }
+
+        button {
+            display: block;
+            margin-bottom: 15px;
+            width: 100%;
+            padding: 10px;
+            background-color: #4285f4;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: #3367d6;
+        }
+
+        #errorContainer {
+            background-color: #ffebee;
+            border: 1px solid #ffcdd2;
+            border-radius: 4px;
+            padding: 10px;
+            margin-top: 20px;
+            display: none;
+        }
+
+        #lastError {
+            color: #c62828;
+            font-size: 14px;
+            margin-bottom: 10px;
+        }
+
+        #dismissError {
+            background-color: #ff5252;
+            font-size: 12px;
+            padding: 5px 10px;
+        }
+
+        #dismissError:hover {
+            background-color: #ff1744;
+        }
+    </style>
 </head>
+
 <body>
-  <h1>URL to Google Doc Appender</h1>
-  <input type="text" id="docId" placeholder="Enter Google Doc ID">
-  <button id="saveSettings">Save Settings</button>
-  <button id="appendUrl">Append Current URL</button>
-  <script src="popup.js"></script>
+    <h1>URL to Google Doc Appender</h1>
+    <button id="appendUrl">Append Current URL</button>
+    <button id="openOptions">Open Settings</button>
+    <div id="errorContainer">
+        <div id="lastError"></div>
+        <button id="dismissError">Dismiss</button>
+    </div>
+    <script src="popup.js"></script>
 </body>
+
 </html>
