--- a/popup.html
+++ b/popup.html
@@ -64,6 +64,7 @@
 <body>
     <h1>URL to Google Doc Appender</h1>
     <button id="appendUrl">Append Current URL</button>
+    <button id="appendAllUrls">Append All URLs</button>
     <button id="openOptions">Open Settings</button>
     <div id="errorContainer">
         <div id="lastError"></div>
